--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-scripts": "5.0.1",
     "react-vis": "^1.12.1",
+    "react-xarrows": "^2.0.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
