--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-vis": "^1.12.1",
     "typescript": "^4.9.5",
