--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.8",
     "chart.js": "^4.4.0",
     "firebase": "^10.7.1",
+    "jQuery": "^1.7.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "@types/react-vis": "^1.11.14"
   }
 }
