--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mantine/core": "^7.3.2",
     "@mantine/hooks": "^7.3.2",
     "@tabler/icons-react": "^2.44.0",
@@ -15,6 +20,7 @@
     "@types/react-dom": "^18.2.8",
     "chart.js": "^4.4.0",
     "firebase": "^10.7.1",
+    "font-awesome": "^4.7.0",
     "jQuery": "^1.7.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
