--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,9 @@
   },
   "include": [
     "src"
-  ]
+  ],
+  "scripts": {
+    "start": "npm-run-all clean --parallel watch:build",
+    "watch:build": "tsc --watch",
+}
 }
