--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
     "jQuery": "^1.7.4",
