--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mantine/core": "^7.3.2",
+    "@mantine/form": "^7.5.1",
     "@mantine/hooks": "^7.3.2",
     "@tabler/icons-react": "^2.44.0",
     "@testing-library/jest-dom": "^5.17.0",
