--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mantine/core": "^7.3.2",
     "@mantine/form": "^7.5.1",
-    "@mantine/hooks": "^7.3.2",
+    "@mantine/hooks": "^7.5.2",
+    "@mantine/notifications": "^7.5.2",
     "@tabler/icons-react": "^2.44.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
