--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "chart.js": "^4.4.0",
+    "fast-csv": "^5.0.1",
     "file-saver": "^2.0.5",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
