--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,10 @@
     "downlevelIteration": true
   },
   "include": [
-    "src"
+    "./src"
   ],
   "scripts": {
     "start": "npm-run-all clean --parallel watch:build",
     "watch:build": "tsc --watch",
-}
+  }
 }
